--- a/accounts.html
+++ b/accounts.html
@@ -1,100 +1,48 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>VOID — Upload Profile Pic</title>
-  <style>
-    body {
-      background: black;
-      color: white;
-      text-align: center;
-      font-family: Arial, sans-serif;
-    }
-    img {
-      width: 120px;
-      height: 120px;
-      border-radius: 50%;
-      object-fit: cover;
-      margin: 10px 0;
-    }
-  </style>
-
-  <!-- Firebase -->
+  <title>Firebase Upload Test</title>
   <script src="https://www.gstatic.com/firebasejs/10.10.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.10.0/firebase-auth-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.10.0/firebase-database-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.10.0/firebase-storage-compat.js"></script>
 </head>
-<body>
-
-  <h1>Upload Profile Picture</h1>
-  <input type="file" id="imageUpload" accept="image/*"><br>
-  <img id="preview" src="#" alt="Preview" style="display:none;"><br>
-  <button onclick="uploadToFirebase()">Upload to Firebase</button>
+<body style="background:black;color:white;text-align:center;">
+  <h2>Upload Profile Picture</h2>
+  <input type="file" id="fileInput" />
+  <button onclick="uploadPic()">Upload</button>
+  <br><br>
+  <img id="preview" src="#" style="display:none;width:100px;height:100px;border-radius:50%;" />
 
   <script>
-    // Firebase Config
     const firebaseConfig = {
       apiKey: "AIzaSyD1YgjFsxh-xZfeHlrxt_0igmH6SBIMcuc",
       authDomain: "void-d9ec4.firebaseapp.com",
-      databaseURL: "https://void-d9ec4-default-rtdb.firebaseio.com",
       projectId: "void-d9ec4",
       storageBucket: "void-d9ec4.appspot.com",
-      messagingSenderId: "267268035851",
       appId: "1:267268035851:web:d535fe4175c06f170f3e0e"
     };
-
     firebase.initializeApp(firebaseConfig);
     const auth = firebase.auth();
     const storage = firebase.storage();
-    const db = firebase.database();
 
-    let selectedFile;
+    // Log in for testing
+    auth.signInWithEmailAndPassword("test@example.com", "yourTestPassword").catch(console.error);
 
-    // Preview logic
-    document.getElementById('imageUpload').addEventListener('change', function () {
-      selectedFile = this.files[0];
-      const reader = new FileReader();
-
-      reader.onload = function (event) {
-        const base64String = event.target.result;
-        const previewImg = document.getElementById('preview');
-        previewImg.src = base64String;
-        previewImg.style.display = 'block';
-      };
-
-      reader.readAsDataURL(selectedFile);
-    });
-
-    // Upload logic
-    function uploadToFirebase() {
+    function uploadPic() {
+      const file = document.getElementById("fileInput").files[0];
       const user = auth.currentUser;
-      if (!user) {
-        alert("Please log in first.");
-        return;
-      }
-      if (!selectedFile) {
-        alert("No file selected.");
-        return;
-      }
 
-      const storageRef = storage.ref("profilePics/" + user.uid);
-      storageRef.put(selectedFile)
-        .then(snapshot => snapshot.ref.getDownloadURL())
-        .then(url => {
-          return db.ref("users/" + user.uid).update({ profilePic: url });
-        })
-        .then(() => {
-          alert("Uploaded and saved!");
-        })
-        .catch(err => {
-          console.error(err);
-          alert("Upload failed.");
-        });
+      if (!user || !file) return alert("Login and select a file first!");
+
+      const ref = storage.ref("profilePics/" + user.uid);
+      ref.put(file).then(() => {
+        return ref.getDownloadURL();
+      }).then(url => {
+        document.getElementById("preview").src = url;
+        document.getElementById("preview").style.display = "block";
+        console.log("Uploaded & previewed:", url);
+      }).catch(err => alert("Upload failed: " + err.message));
     }
-
-    // Simulated login for testing (REMOVE for production)
-    auth.signInWithEmailAndPassword("test@void.com", "password123")
-      .catch(err => console.log("Login error:", err.message));
   </script>
 </body>
 </html>
