--- a/accounts.html
+++ b/accounts.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Firebase Upload Test</title>
+  <title>Test Upload</title>
   <script src="https://www.gstatic.com/firebasejs/10.10.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.10.0/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.10.0/firebase-storage-compat.js"></script>
 </head>
 <body style="background:black;color:white;text-align:center;">
   <h2>Upload Profile Picture</h2>
-  <input type="file" id="fileInput" />
-  <button onclick="uploadPic()">Upload</button>
+  <input type="file" id="fileInput" accept="image/*" />
+  <button id="uploadBtn" disabled>Upload Image</button>
   <br><br>
   <img id="preview" src="#" style="display:none;width:100px;height:100px;border-radius:50%;" />
 
@@ -25,24 +25,38 @@
     const auth = firebase.auth();
     const storage = firebase.storage();
 
-    // Log in for testing
-    auth.signInWithEmailAndPassword("test@example.com", "yourTestPassword").catch(console.error);
+    const uploadBtn = document.getElementById("uploadBtn");
+    const fileInput = document.getElementById("fileInput");
 
-    function uploadPic() {
-      const file = document.getElementById("fileInput").files[0];
-      const user = auth.currentUser;
+    // Enable upload only after auth confirms user
+    let currentUser = null;
+    auth.onAuthStateChanged(user => {
+      if (user) {
+        currentUser = user;
+        uploadBtn.disabled = false;
+        console.log("Logged in as:", user.uid);
+      } else {
+        alert("Not logged in. Upload won't work.");
+      }
+    });
 
-      if (!user || !file) return alert("Login and select a file first!");
+    uploadBtn.addEventListener("click", () => {
+      const file = fileInput.files[0];
+      if (!file || !currentUser) {
+        alert("No file or user.");
+        return;
+      }
 
-      const ref = storage.ref("profilePics/" + user.uid);
-      ref.put(file).then(() => {
-        return ref.getDownloadURL();
-      }).then(url => {
+      const ref = storage.ref("profilePics/" + currentUser.uid);
+      ref.put(file).then(() => ref.getDownloadURL()).then(url => {
         document.getElementById("preview").src = url;
         document.getElementById("preview").style.display = "block";
-        console.log("Uploaded & previewed:", url);
-      }).catch(err => alert("Upload failed: " + err.message));
-    }
+        console.log("Success! File URL:", url);
+      }).catch(error => {
+        console.error("Upload failed:", error);
+        alert("Upload error: " + error.message);
+      });
+    });
   </script>
 </body>
 </html>
