--- a/accounts.html
+++ b/accounts.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Test Upload</title>
+  <title>Upload Test</title>
   <script src="https://www.gstatic.com/firebasejs/10.10.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.10.0/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.10.0/firebase-storage-compat.js"></script>
 </head>
 <body style="background:black;color:white;text-align:center;">
-  <h2>Upload Profile Picture</h2>
-  <input type="file" id="fileInput" accept="image/*" />
-  <button id="uploadBtn" disabled>Upload Image</button>
-  <br><br>
-  <img id="preview" src="#" style="display:none;width:100px;height:100px;border-radius:50%;" />
+  <h2>Test Image Upload</h2>
+  <input type="file" id="fileInput" accept="image/*"><br><br>
+  <button id="uploadBtn">Upload</button><br><br>
+  <img id="preview" src="#" style="display:none;width:100px;border-radius:50%;" />
 
   <script>
     const firebaseConfig = {
@@ -25,36 +24,28 @@
     const auth = firebase.auth();
     const storage = firebase.storage();
 
-    const uploadBtn = document.getElementById("uploadBtn");
-    const fileInput = document.getElementById("fileInput");
-
-    // Enable upload only after auth confirms user
-    let currentUser = null;
     auth.onAuthStateChanged(user => {
-      if (user) {
-        currentUser = user;
-        uploadBtn.disabled = false;
-        console.log("Logged in as:", user.uid);
-      } else {
-        alert("Not logged in. Upload won't work.");
-      }
-    });
-
-    uploadBtn.addEventListener("click", () => {
-      const file = fileInput.files[0];
-      if (!file || !currentUser) {
-        alert("No file or user.");
+      if (!user) {
+        alert("You must be logged in to upload.");
         return;
       }
 
-      const ref = storage.ref("profilePics/" + currentUser.uid);
-      ref.put(file).then(() => ref.getDownloadURL()).then(url => {
-        document.getElementById("preview").src = url;
-        document.getElementById("preview").style.display = "block";
-        console.log("Success! File URL:", url);
-      }).catch(error => {
-        console.error("Upload failed:", error);
-        alert("Upload error: " + error.message);
+      document.getElementById('uploadBtn').addEventListener('click', () => {
+        const file = document.getElementById('fileInput').files[0];
+        if (!file) return alert("No file selected");
+
+        const ref = storage.ref('profilePics/' + user.uid);
+        ref.put(file)
+          .then(() => ref.getDownloadURL())
+          .then(url => {
+            document.getElementById('preview').src = url;
+            document.getElementById('preview').style.display = "block";
+            console.log("Uploaded! URL:", url);
+          })
+          .catch(error => {
+            console.error("Upload error:", error);
+            alert("Upload failed: " + error.message);
+          });
       });
     });
   </script>
