--- a/accounts.html
+++ b/accounts.html
@@ -1,53 +1,96 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Upload Test</title>
-  <script src="https://www.gstatic.com/firebasejs/10.10.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.10.0/firebase-auth-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.10.0/firebase-storage-compat.js"></script>
+  <title>Firebase Profile Upload Test</title>
+  <style>
+    body {
+      background: black;
+      color: white;
+      font-family: sans-serif;
+      text-align: center;
+      padding: 20px;
+    }
+    img {
+      max-width: 150px;
+      border-radius: 50%;
+      margin-top: 20px;
+    }
+  </style>
 </head>
-<body style="background:black;color:white;text-align:center;">
-  <h2>Test Image Upload</h2>
-  <input type="file" id="fileInput" accept="image/*"><br><br>
-  <button id="uploadBtn">Upload</button><br><br>
-  <img id="preview" src="#" style="display:none;width:100px;border-radius:50%;" />
+<body>
+  <h1>Firebase Upload Test</h1>
+
+  <div id="profile" style="display:none;">
+    <input type="file" id="profilePicInput" accept="image/*"><br><br>
+    <button onclick="uploadProfilePicture()">Upload Profile Picture</button>
+    <div id="status"></div>
+    <h2>Current Profile Picture:</h2>
+    <img id="profilePicDisplay" src="" alt="None yet">
+  </div>
+
+  <!-- Firebase SDKs -->
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-database-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-storage-compat.js"></script>
 
   <script>
     const firebaseConfig = {
-      apiKey: "AIzaSyD1YgjFsxh-xZfeHlrxt_0igmH6SBIMcuc",
+      apiKey: "AIzaSyA1Frv2_9T3giRC3I57p0nLgZFo7M7Y7MQ",
       authDomain: "void-d9ec4.firebaseapp.com",
+      databaseURL: "https://void-d9ec4-default-rtdb.firebaseio.com",
       projectId: "void-d9ec4",
       storageBucket: "void-d9ec4.appspot.com",
+      messagingSenderId: "267268035851",
       appId: "1:267268035851:web:d535fe4175c06f170f3e0e"
     };
+
     firebase.initializeApp(firebaseConfig);
     const auth = firebase.auth();
+    const database = firebase.database();
     const storage = firebase.storage();
 
-    auth.onAuthStateChanged(user => {
-      if (!user) {
-        alert("You must be logged in to upload.");
-        return;
-      }
-
-      document.getElementById('uploadBtn').addEventListener('click', () => {
-        const file = document.getElementById('fileInput').files[0];
-        if (!file) return alert("No file selected");
-
-        const ref = storage.ref('profilePics/' + user.uid);
-        ref.put(file)
-          .then(() => ref.getDownloadURL())
-          .then(url => {
-            document.getElementById('preview').src = url;
-            document.getElementById('preview').style.display = "block";
-            console.log("Uploaded! URL:", url);
-          })
-          .catch(error => {
-            console.error("Upload error:", error);
-            alert("Upload failed: " + error.message);
-          });
+    auth.signInWithEmailAndPassword("florisveen@gmail.com", "42884288")
+      .then(() => {
+        document.getElementById('profile').style.display = 'block';
+        loadProfilePicture(auth.currentUser.uid);
+      })
+      .catch(error => {
+        console.error("Login failed:", error.message);
       });
-    });
+
+    function uploadProfilePicture() {
+      const file = document.getElementById('profilePicInput').files[0];
+      if (!file) return alert("Choose a file first.");
+
+      const uid = auth.currentUser.uid;
+      const ref = storage.ref('profilePictures/' + uid + '.jpg');
+      const uploadTask = ref.put(file);
+
+      uploadTask.on('state_changed',
+        () => {
+          document.getElementById('status').innerText = "Uploading...";
+        },
+        err => {
+          console.error(err);
+          document.getElementById('status').innerText = "Upload failed.";
+        },
+        () => {
+          ref.getDownloadURL().then(url => {
+            database.ref('users/' + uid).update({ profilePicture: url });
+            document.getElementById('profilePicDisplay').src = url;
+            document.getElementById('status').innerText = "Upload successful!";
+          });
+        }
+      );
+    }
+
+    function loadProfilePicture(uid) {
+      database.ref('users/' + uid + '/profilePicture').once('value').then(snap => {
+        const url = snap.val();
+        if (url) document.getElementById('profilePicDisplay').src = url;
+      });
+    }
   </script>
 </body>
 </html>
