--- a/accounts.html
+++ b/accounts.html
@@ -45,7 +45,7 @@
       authDomain: "void-d9ec4.firebaseapp.com",
       databaseURL: "https://void-d9ec4-default-rtdb.firebaseio.com",
       projectId: "void-d9ec4",
-      storageBucket: "void-d9ec4.appspot.com",
+      storageBucket: "void-d9ec4.firebasestorage.app",
       messagingSenderId: "267268035851",
       appId: "1:267268035851:web:d535fe4175c06f170f3e0e"
     };
