--- a/accounts.html
+++ b/accounts.html
@@ -41,11 +41,11 @@
 
   <script>
     const firebaseConfig = {
-      apiKey: "AIzaSyA1Frv2_9T3giRC3I57p0nLgZFo7M7Y7MQ",
+      apiKey: "AIzaSyD1YgjFsxh-xZfeHlrxt_0igmH6SBIMcuc",
       authDomain: "void-d9ec4.firebaseapp.com",
       databaseURL: "https://void-d9ec4-default-rtdb.firebaseio.com",
       projectId: "void-d9ec4",
-      storageBucket: "void-d9ec4.firebasestorage.app",
+      storageBucket: "void-d9ec4.appspot.com",
       messagingSenderId: "267268035851",
       appId: "1:267268035851:web:d535fe4175c06f170f3e0e"
     };
