--- a/accounts.html
+++ b/accounts.html
@@ -1,107 +1,79 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Upload Profile Picture (Universal)</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-storage-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-auth-compat.js"></script>
-</head>
-<body style="background:black; color:white; text-align:center; padding:40px; font-family:sans-serif;">
+  <title>Firebase Upload Test</title>
+  <script type="module">
+    // Import Firebase modules
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
+    import { getAuth, signInWithEmailAndPassword, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js";
+    import { getStorage, ref, uploadBytes, getDownloadURL } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-storage.js";
 
-  <h2>Upload Profile Picture</h2>
-  <input type="file" id="fileInput" accept="image/*" />
-  <br><br>
-  <button id="uploadBtn" disabled>Upload</button>
-  <p id="status">Status: Initializing...</p>
-  <img id="preview" style="display:none; margin-top:20px; max-width:250px;" />
-
-  <script>
     const firebaseConfig = {
       apiKey: "AIzaSyD1YgjFsxh-xZfeHlrxt_0igmH6SBIMcuc",
       authDomain: "void-d9ec4.firebaseapp.com",
-      databaseURL: "https://void-d9ec4-default-rtdb.firebaseio.com",
       projectId: "void-d9ec4",
       storageBucket: "void-d9ec4.appspot.com",
       messagingSenderId: "267268035851",
       appId: "1:267268035851:web:d535fe4175c06f170f3e0e"
     };
 
-    firebase.initializeApp(firebaseConfig);
-    const storage = firebase.storage();
+    const app = initializeApp(firebaseConfig);
+    const auth = getAuth(app);
+    const storage = getStorage(app);
 
-    const isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
-    const status = document.getElementById('status');
-    const fileInput = document.getElementById('fileInput');
-    const uploadBtn = document.getElementById('uploadBtn');
-    const preview = document.getElementById('preview');
+    let currentUser = null;
 
-    let currentFile = null;
+    const statusEl = document.getElementById("status");
+    const previewEl = document.getElementById("preview");
 
-    function updateStatus(msg) {
-      console.log(msg);
-      status.innerText = "Status: " + msg;
+    function isMobile() {
+      return /Android|iPhone|iPad|iPod/i.test(navigator.userAgent);
     }
 
-    fileInput.addEventListener('change', () => {
-      const file = fileInput.files[0];
-      if (file) {
-        currentFile = file;
-        const reader = new FileReader();
-        reader.onload = e => {
-          preview.src = e.target.result;
-          preview.style.display = 'block';
-        };
-        reader.readAsDataURL(file);
-        updateStatus("Image selected. Ready to upload.");
-        uploadBtn.disabled = false;
+    // Sign in hardcoded user
+    signInWithEmailAndPassword(auth, "florisveen@gmail.com", "42884288")
+      .then((userCredential) => {
+        currentUser = userCredential.user;
+        statusEl.textContent = "Signed in as " + currentUser.email;
+      })
+      .catch((error) => {
+        statusEl.textContent = "Login failed: " + error.message;
+      });
+
+    document.getElementById("fileInput").addEventListener("change", async (e) => {
+      const file = e.target.files[0];
+      if (!file) return;
+
+      const reader = new FileReader();
+      reader.onload = function (event) {
+        previewEl.src = event.target.result;
+      };
+      reader.readAsDataURL(file);
+
+      statusEl.textContent = isMobile() ? "Mobile detected. Uploading..." : "Desktop. Uploading...";
+
+      try {
+        const path = isMobile()
+          ? 'publicUploads/' + file.name
+          : 'profilePictures/' + currentUser.uid + '.jpg';
+
+        const storageRef = ref(storage, path);
+        const snapshot = await uploadBytes(storageRef, file);
+        const downloadURL = await getDownloadURL(snapshot.ref);
+
+        statusEl.textContent = "Upload successful! URL: " + downloadURL;
+        console.log("Download URL:", downloadURL);
+      } catch (error) {
+        console.error(error);
+        statusEl.textContent = "Upload failed: " + error.message;
       }
     });
-
-    if (!isMobile) {
-      // Desktop: Use Authenticated Upload
-      firebase.auth().signInWithEmailAndPassword('florisveen@gmail.com', '42884288')
-        .then(userCredential => {
-          const user = userCredential.user;
-          updateStatus("Signed in as " + user.email + ". Select an image to upload.");
-          uploadBtn.addEventListener('click', () => {
-            if (!currentFile) return updateStatus("No file selected.");
-            updateStatus("Uploading...");
-
-            const storageRef = storage.ref('profilePictures/' + user.uid + '.jpg');
-            storageRef.put(currentFile)
-              .then(snapshot => snapshot.ref.getDownloadURL())
-              .then(url => {
-                updateStatus("Upload complete!\nURL: " + url);
-                preview.src = url;
-              })
-              .catch(err => updateStatus("Upload failed: " + err.message));
-          });
-        })
-        .catch(err => updateStatus("Login failed: " + err.message));
-    } else {
-      // Mobile: Anonymous Upload to public folder
-      updateStatus("Mobile device detected. Using public upload.");
-      uploadBtn.disabled = false;
-
-      uploadBtn.addEventListener('click', () => {
-        if (!currentFile) return updateStatus("No file selected.");
-        updateStatus("Uploading (mobile)...");
-
-        const timestamp = Date.now();
-        const randomId = Math.floor(Math.random() * 1000000);
-        const path = `publicUploads/mobile_${timestamp}_${randomId}.jpg`;
-
-        const storageRef = storage.ref(path);
-        storageRef.put(currentFile)
-          .then(snapshot => snapshot.ref.getDownloadURL())
-          .then(url => {
-            updateStatus("Upload complete!\nURL: " + url);
-            preview.src = url;
-          })
-          .catch(err => updateStatus("Upload failed: " + err.message));
-      });
-    }
   </script>
+</head>
+<body style="background: black; color: white; font-family: sans-serif; text-align: center; padding-top: 50px;">
+  <h1>Firebase Upload Test</h1>
+  <input type="file" id="fileInput"><br><br>
+  <img id="preview" src="" style="max-width: 200px; display: block; margin: auto;"><br>
+  <p id="status">Waiting for login...</p>
 </body>
 </html>
