--- a/accounts.html
+++ b/accounts.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Firebase Upload Test</title>
+  <title>Firebase Debug Upload</title>
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
     import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js";
-    import { getStorage, ref, uploadBytes, getDownloadURL } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-storage.js";
+    import { getStorage, ref, uploadBytes } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-storage.js";
 
     const firebaseConfig = {
       apiKey: "AIzaSyD1YgjFsxh-xZfeHlrxt_0igmH6SBIMcuc",
@@ -21,62 +21,31 @@
     const storage = getStorage(app);
 
     const statusEl = document.getElementById("status");
-    const previewEl = document.getElementById("preview");
 
-    let currentUser = null;
+    async function tryUploadBlob() {
+      try {
+        statusEl.textContent = "Logging in...";
+        const userCredential = await signInWithEmailAndPassword(auth, "florisveen@gmail.com", "42884288");
+        const user = userCredential.user;
 
-    // Login
-    signInWithEmailAndPassword(auth, "florisveen@gmail.com", "42884288")
-      .then((userCredential) => {
-        currentUser = userCredential.user;
-        statusEl.textContent = "Signed in as " + currentUser.email;
-      })
-      .catch((error) => {
-        alert("Login failed: " + error.message);
-        statusEl.textContent = "Login failed: " + error.message;
-      });
+        statusEl.textContent = "Logged in as " + user.email + ". Uploading test blob...";
 
-    // Upload Handler
-    document.getElementById("fileInput").addEventListener("change", (e) => {
-      const file = e.target.files[0];
-      if (!file) return;
+        const storageRef = ref(storage, 'testUploads/' + user.uid + '_test.txt');
+        const blob = new Blob(["Hello World"], { type: 'text/plain' });
 
-      const reader = new FileReader();
-      reader.onload = async function (event) {
-        const dataUrl = event.target.result;
-        previewEl.src = dataUrl;
-        statusEl.textContent = "Uploading...";
+        await uploadBytes(storageRef, blob);
+        statusEl.textContent = "Test blob uploaded successfully!";
+      } catch (err) {
+        console.error(err);
+        statusEl.textContent = "Upload failed: " + err.message;
+      }
+    }
 
-        try {
-          const storageRef = ref(storage, 'profilePictures/' + currentUser.uid + '.jpg');
-
-          // Convert dataURL to Blob
-          function dataURLtoBlob(dataurl) {
-            const arr = dataurl.split(','), mime = arr[0].match(/:(.*?);/)[1],
-                  bstr = atob(arr[1]), n = bstr.length, u8arr = new Uint8Array(n);
-            for (let i = 0; i < n; i++) {
-                u8arr[i] = bstr.charCodeAt(i);
-            }
-            return new Blob([u8arr], { type: mime });
-          }
-
-          const blob = dataURLtoBlob(dataUrl);
-          await uploadBytes(storageRef, blob);
-          const url = await getDownloadURL(storageRef);
-          statusEl.textContent = "Upload successful! URL: " + url;
-        } catch (error) {
-          alert("Upload failed: " + error.message);
-          statusEl.textContent = "Upload failed: " + error.message;
-        }
-      };
-      reader.readAsDataURL(file);
-    });
+    tryUploadBlob();
   </script>
 </head>
-<body style="background:black; color:white; font-family:sans-serif; text-align:center; padding-top:50px;">
-  <h1>Firebase Upload Test</h1>
-  <input type="file" id="fileInput"><br><br>
-  <img id="preview" src="" style="max-width:200px; display:block; margin:auto;"><br>
-  <p id="status">Waiting for login...</p>
+<body style="background:black; color:white; text-align:center; padding-top:50px; font-family:sans-serif;">
+  <h1>Firebase Blob Upload Debug</h1>
+  <p id="status">Initializing...</p>
 </body>
 </html>
